Adjust boilerplates to my own preferences

--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -25,5 +25,10 @@
 	"devDependencies": {
 		"ava": "^0.20.0",
 		"xo": "^0.18.2"
+	},
+	"xo": {
+		"rules": {
+			"quotes": ["error", "double"]
+		}
 	}
 }
