--- a/cli-boilerplate/package.json
+++ b/cli-boilerplate/package.json
@@ -34,5 +34,10 @@
 		"ava": "^0.20.0",
 		"execa": "^0.7.0",
 		"xo": "^0.18.2"
+	},
+	"xo": {
+		"rules": {
+			"quotes": ["error", "double"]
+		}
 	}
 }
